// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary for multiple expense 1`] = `
<div>
  <h1>
     Viewing 
    2
     
    expenses
     totalling 
    $23,434,234,234.00
    .
  </h1>
</div>
`;

exports[`should render expenses summary for one expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $234.00
    .
  </h1>
</div>
`;
